yaml/helm-raw-yaml/y-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: y-client-deployment
  namespace: default
  labels:
    app: y-client
    version: "1.0.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: y-client
  template:
    metadata:
      labels:
        app: y-client
    spec:
      containers:
      - name: y-client-container
        # Readiness probe to check if the api is ready to receive traffic
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          successThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
        image: "larooij/y-client:1.0.0"
        ports:
        - containerPort: 3000
