yaml/helm-raw-yaml/y-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: y-db-deployment
  namespace: default
  labels:
    app: y-db
    version: "1.0.0"
spec:
  selector:
    matchLabels:
      app: y-db
  template:
    metadata:
      labels:
        app: y-db
    spec:
      containers:
      - name: y-db-container
        image: "mysql:8.2.0"
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: y-db-init
            mountPath: /docker-entrypoint-initdb.d
          - name: y-db-volume
            mountPath: /var/lib/mysql
      volumes:
        - name: y-db-init
          configMap:
            name: y-db-init-config
        - name: y-db-volume
          persistentVolumeClaim:
            claimName: y-db-pv-claim
