yaml/helm-raw-yaml/y-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-api-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 1323
    targetPort: 1323
    protocol: TCP
  selector:
    app: y-api
