yaml/helm-raw-yaml/y-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-client-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: y-client
