yaml/helm-raw-yaml/y-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-db-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: y-db
