yaml/helm-raw-yaml/y-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: ca-issuer
    cert-manager.io/common-name: y.florisbos.com
  name: y-ingress
  namespace: default
spec:
  defaultBackend:
      service:
        name: y-client-service
        port:
          number: 3000
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: y-client-service
              port:
                number: 3000
        - pathType: Prefix
          path: /api
          backend:
            service:
              name: y-api-service
              port:
                number: 1323
  tls:
  - hosts: 
    - y.florisbos.com
    secretName: y-ingress-cert
